...
      cancelLabel={t('authentication.forced_logout_dismiss')}
      cancelTestID="forced-logout-dismiss"
      confirmLabel={t('authentication.login')}
      confirmTestID="forced-logout-login"
      onCancel={onDismiss}
      onConfirm={onLogIn}
      testID="forced-logout-modal"
      title={t('authentication.forced_logout_title')}
      visible={isVisible}
    />
  );
}

