...
  return (
    <Pressable
      accessibilityLabel={t('media_player.show_fullscreen_media_player')}
      accessibilityRole="button"
      onPress={onExpand}
      style={[styles.container, isTablet ? styles.containerTablet : undefined]}
      testID="mini-player"
    >
      <MiniPlayerProgress />
      <View style={styles.row}>
        <MiniPlayerArtwork accessibilityLabel={t('media_player.media_player_image')} />
        <View style={styles.textColumn}>
          <MarqueeText style={styles.title} testID="mini-player-title">
...
          <PlayerTransportButton
            appearance="bare"
            onPause={handlePause}
            onPlay={handlePlay}
            onErrorPress={handleErrorPress}
            state={transportState}
            testID="mini-player-play-pause"
          />
        </View>
      </View>
    </Pressable>
  );
}
...
