...
          style={styles.artwork}
          testID="episode-detail-artwork"
          uri={artworkUri}
          viewerUri={viewerUri}
        />
        <DownloadRowControl
          completeTestID="episode-detail-download-complete"
          item={episode}
          testID="episode-detail-download"
        />
      </View>
      <View style={styles.titles}>
        {podcastName}
        <Text accessibilityRole="header" style={styles.title} testID="episode-detail-title">
          {episodeTitle}
...
