...
      },
      {
        onPress: () => {
          navigation.navigate(MORE_STACK_ROUTES.MoreSettingsPopularityTracking);
        },
        subtitle: popularityAllowed ? t('misc.on') : t('misc.off'),
        testID: 'more-settings-popularity-tracking',
        title: t('popularity_tracking.title'),
      },
    ],
    [navigation, popularityAllowed, t, termsSubtitle]
  );

...
